--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./",
+    "paths": {
+      "@src/*": ["src/*"],
+      "@tests/*": ["src/tests/*"]
+    }
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src", "src/tests"],
+  "exclude": ["node_modules", "build"]
 }
